# subtyping

./: pyproject.toml
subtyping/: __init__.py  logger.py
subtyping/subtype/: __init__.py  builtin_subclasses.py  is_sub_type.py  normalized_type.py  types.py
subtyping/subtype/handlers/: __init__.py  any_compare.py  check_is_type.py  immutable_collection_compare.py  none_compare.py  simple_compare.py  subclass_with_any_compare.py
tests/subtype/: test_any.py  test_empty_args_are_any.py  test_equal.py  test_none.py  test_subclass.py
